# neon-player

./: .gitignore  README.md  build.sh  pyproject.toml  requirements-bundle.txt  requirements.txt
.github/actions/bundle/: action.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: bundle.yml  main.yml
deployment/: neon_player.spec  pupil_core.spec  reproducible_build.ps1  reproducible_build.sh
deployment/_packaging/: linux.py  macos.py  windows.py
deployment/icons/: neon-player.icns
examples/plugins/: demo_widgets.py
pupil_src/: main.py
pupil_src/launchables/: player.py
pupil_src/shared_modules/: annotations.py  audio_playback.py  audio_utils.py  av_writer.py  batch_exporter.py  blink_detection.py  camera_models.py  eye_lid_timeline.py  eye_state_timeline.py  file_methods.py  fixation_detector.py  hotkey.py  image_adjustments.py  launchable_args.py  log_display.py  log_history.py  methods.py  player_methods.py  plugin_manager.py  progress_reporter.py  raw_data_exporter.py  system_graphs.py  system_timelines.py  vis_fixation.py  vis_light_points.py  vis_polyline.py  worn_detection.py
pupil_src/shared_modules/gaze_mapping/: gazer_base.py
pupil_src/shared_modules/gaze_producer/: gaze_from_recording.py  gaze_producer_base.py
pupil_src/shared_modules/gaze_producer/controller/: __init__.py  gaze_mapper_controller.py
pupil_src/shared_modules/gaze_producer/model/: __init__.py  gaze_mapper.py  gaze_mapper_storage.py
pupil_src/shared_modules/gaze_producer/ui/: __init__.py  gaze_mapper_menu.py  gaze_mapper_timeline.py  select_and_refresh_menu.py  storage_edit_menu.py
pupil_src/shared_modules/imu_timeline/: __init__.py  imu_pb2.py  imu_timeline.py
pupil_src/shared_modules/pupil_recording/: recording.py  recording_utils.py
pupil_src/shared_modules/scan_path/: controller.py
pupil_src/shared_modules/surface_tracker/: __init__.py  background_tasks.py  gui.py  offline_utils.py  surface.py  surface_file_store.py  surface_marker.py  surface_marker_detector.py  surface_serializer.py  surface_tracker.py  surface_tracker_offline.py
pupil_src/shared_modules/video_capture/: __init__.py  file_backend.py  utils.py
pupil_src/tests/surface_tracker/: test_surface_file_store.py  test_surface_marker.py  test_surface_serializer.py
src/pupil_labs/neon_player/: app.py  history.py  ipc_logger.py  job_manager.py  project.py  recent.py  settings.py  utilities.py  workspace.py
tests/: conftest.py  test_app.py  test_job_manager.py  test_settings.py
tests/test_plugin_management/: test_dependencies.py  test_dependency_resolution.py  test_pep723.py
tests/test_plugins/: test_audio.py  test_events.py  test_eyestate.py  test_fixations.py  test_gaze.py
tests/test_plugins/test_events/: test_events_recording.py  test_load.py  test_plugin_recording.py
tests/test_plugins/test_surface_tracking/: test_surface_tracking.py  test_tracked_surface.py
tests/test_ui/: test_timeline_dock_utils.py
(+62 files in other folders)
