[project]
name = "pupil-labs-neon-player"
description = ""
authors = [{ name = "Pupil Labs GmbH", email = "info@pupil-labs.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11, <4.0"
keywords = []
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "av>=16.0.0",
    "nuitka<2.8",
    "numpy<2.4.0",
    "numpyencoder>=0.3.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "protobuf<6",
    "pupil-apriltags>=1.0.4.post11",
    "pupil-labs-marker-mapper>=1.0.0",
    "pupil-labs-neon-recording>=2.1.4",
    "pupil-labs-video>=1.0.11",
    "pyobjc; sys_platform == 'darwin'",
    "pyqtgraph>=0.13.7",
    "pyside6>=6.10.2",
    "qt-property-widgets",
    "scipy>=1.15.2",
    "setuptools>=78.1.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
examples = []

[project.urls]
Homepage = "https://pupil-labs.github.io/pl-neon-player"
Documentation = "https://pupil-labs.github.io/pl-neon-player"
Repository = "https://github.com/pupil-labs/pl-neon-player"
Issues = "https://github.com/pupil-labs/pl-neon-player/issues"

[project.scripts]
neon-player = "pupil_labs.neon_player.main:main"


[tool.uv]
dev-dependencies = [
    "pytest>=8.2",
    "pre-commit>=2.20.0",
    "mypy>=0.991",
    "deptry>=0.20.0",
    "tox-uv>=1.11.3",
    "pytest-cov>=4.0.0",

    # stubs
    # "opencv-stubs",
    # "types-protobuf",
    # "pandas-stubs",

    # docs
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mike",
    "mkdocs>=1.6",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "mkdocstrings[python]>=0.25",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2.0; python_version < '3.11'",
]

[tool.uv.sources]
qt-property-widgets = { git = "https://github.com/domstoppable/qt-property-widgets" }

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_format = '%(asctime)s %(levelname)7s %(name)-60s | %(message)-100s "%(pathname)s:%(lineno)s"'

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["pupil_labs"]

[tool.deptry.per_rule_ignores]
DEP001 = ["pupil_labs", "cv2"]
DEP002 = ["opencv-python"]
DEP003 = ["pupil_labs", "typing_extensions"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/pupil_labs", "src/pupil_labs/neon_player"]
